--- a/basicktest/src/main/res/layout/activity_elemk.xml
+++ b/basicktest/src/main/res/layout/activity_elemk.xml
@@ -10,31 +10,31 @@
         android:orientation="vertical">
 
         <com.google.android.material.button.MaterialButton
-            style="@style/BtnStyle"
+            style="@style/Btn_Style"
             android:onClick="goElemKVBVM"
             android:text="goElemKVBVM"
             tools:ignore="HardcodedText,UsingOnClickInXml" />
 
         <com.google.android.material.button.MaterialButton
-            style="@style/BtnStyle"
+            style="@style/Btn_Style"
             android:onClick="goElemKService"
             android:text="goElemKService"
             tools:ignore="HardcodedText,UsingOnClickInXml" />
 
         <com.google.android.material.button.MaterialButton
-            style="@style/BtnStyle"
+            style="@style/Btn_Style"
             android:onClick="goElemKReceiver"
             android:text="goElemKReceiver"
             tools:ignore="HardcodedText,UsingOnClickInXml" />
 
         <com.google.android.material.button.MaterialButton
-            style="@style/BtnStyle"
+            style="@style/Btn_Style"
             android:onClick="goElemKGesture"
             android:text="goElemKGesture"
             tools:ignore="HardcodedText,UsingOnClickInXml" />
 
         <com.google.android.material.button.MaterialButton
-            style="@style/BtnStyle"
+            style="@style/Btn_Style"
             android:onClick="goElemKGestureFling"
             android:text="goElemKGestureFling"
             tools:ignore="HardcodedText,UsingOnClickInXml" />
