--- a/basicktest/src/main/res/layout/activity_taskk.xml
+++ b/basicktest/src/main/res/layout/activity_taskk.xml
@@ -10,19 +10,19 @@
         android:orientation="vertical">
 
         <com.google.android.material.button.MaterialButton
-            style="@style/BtnStyle"
+            style="@style/Btn_Style"
             android:onClick="goTaskKPoll"
             android:text="goTaskKPoll"
             tools:ignore="HardcodedText,UsingOnClickInXml" />
 
         <com.google.android.material.button.MaterialButton
-            style="@style/BtnStyle"
+            style="@style/Btn_Style"
             android:onClick="goTaskKAsync"
             android:text="goTaskKAsync"
             tools:ignore="HardcodedText,UsingOnClickInXml" />
 
         <com.google.android.material.button.MaterialButton
-            style="@style/BtnStyle"
+            style="@style/Btn_Style"
             android:onClick="goTaskKExecutor"
             android:text="goTaskKExecutor"
             tools:ignore="HardcodedText,UsingOnClickInXml" />
