--- a/uicorektest/src/main/res/layout/activity_layoutk_refresh_lottie.xml
+++ b/uicorektest/src/main/res/layout/activity_layoutk_refresh_lottie.xml
@@ -23,9 +23,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="120dp"
                     android:layout_marginBottom="2dp"
-                    android:background="@color/blue_light"
+                    android:background="@color/ui_blue_050"
                     android:text="item"
-                    android:textColor="@color/blue_dark"
+                    android:textColor="@color/ui_blue_666"
                     android:textSize="20sp"
                     tools:ignore="HardcodedText" />
 
@@ -33,7 +33,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="120dp"
                     android:layout_marginBottom="2dp"
-                    android:background="@color/blue_theme"
+                    android:background="@color/ui_blue_633"
                     android:text="item"
                     android:textColor="@android:color/white"
                     android:textSize="20sp"
@@ -43,7 +43,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="120dp"
                     android:layout_marginBottom="2dp"
-                    android:background="@color/blue_normal"
+                    android:background="@color/ui_blue_650"
                     android:text="item"
                     android:textColor="@android:color/white"
                     android:textSize="20sp"
@@ -53,7 +53,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="120dp"
                     android:layout_marginBottom="2dp"
-                    android:background="@color/blue_dark"
+                    android:background="@color/ui_blue_666"
                     android:text="item"
                     android:textColor="@android:color/white"
                     android:textSize="20sp"
@@ -63,7 +63,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="120dp"
                     android:layout_marginBottom="2dp"
-                    android:background="@color/blue_normal"
+                    android:background="@color/ui_blue_650"
                     android:text="item"
                     android:textColor="@android:color/white"
                     android:textSize="20sp"
@@ -73,7 +73,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="120dp"
                     android:layout_marginBottom="2dp"
-                    android:background="@color/blue_theme"
+                    android:background="@color/ui_blue_633"
                     android:text="item"
                     android:textColor="@android:color/white"
                     android:textSize="20sp"
@@ -82,9 +82,9 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="120dp"
-                    android:background="@color/blue_light"
+                    android:background="@color/ui_blue_050"
                     android:text="item"
-                    android:textColor="@color/blue_dark"
+                    android:textColor="@color/ui_blue_666"
                     android:textSize="20sp"
                     tools:ignore="HardcodedText" />
             </LinearLayout>
