--- a/abilityktest/src/main/res/layout/activity_transk.xml
+++ b/abilityktest/src/main/res/layout/activity_transk.xml
@@ -18,7 +18,7 @@
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/transk_t2s_btn"
-            style="@style/BtnStyle"
+            style="@style/Btn_Style"
             android:text="文本转语音"
             tools:ignore="HardcodedText" />
     </LinearLayout>
