--- a/basicktest/src/main/res/layout/activity_cachek.xml
+++ b/basicktest/src/main/res/layout/activity_cachek.xml
@@ -18,7 +18,7 @@
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/cachek_btn"
-            style="@style/BtnStyle"
+            style="@style/Btn_Style"
             android:text="保存"
             tools:ignore="HardcodedText" />
     </LinearLayout>
