--- a/basicktest/src/main/res/layout/activity_elemk_service.xml
+++ b/basicktest/src/main/res/layout/activity_elemk_service.xml
@@ -14,7 +14,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:textColor="@color/blue_normal"
+            android:textColor="@color/ui_blue_650"
             android:textSize="18sp"
             android:textStyle="bold"
             tools:text="123" />
