--- a/basicktest/src/main/res/layout/activity_manifestk.xml
+++ b/basicktest/src/main/res/layout/activity_manifestk.xml
@@ -10,7 +10,7 @@
         android:orientation="vertical">
 
         <com.google.android.material.button.MaterialButton
-            style="@style/BtnStyle"
+            style="@style/Btn_Style"
             android:onClick="goManifestKPermission"
             android:text="goManifestKPermission"
             tools:ignore="HardcodedText,UsingOnClickInXml" />
