--- a/basicktest/src/main/res/layout/activity_taskk_async.xml
+++ b/basicktest/src/main/res/layout/activity_taskk_async.xml
@@ -11,7 +11,7 @@
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/taskk_async_btn"
-            style="@style/BtnStyle"
+            style="@style/Btn_Style"
             android:text="开始异步任务(10个)"
             tools:ignore="HardcodedText" />
     </LinearLayout>
