--- a/basicktest/src/main/res/layout/activity_taskk_executor.xml
+++ b/basicktest/src/main/res/layout/activity_taskk_executor.xml
@@ -17,19 +17,19 @@
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/taskk_executor_btn_order"
-                style="@style/BtnStyle"
+                style="@style/Btn_Style"
                 android:text="按任务优先级执行"
                 tools:ignore="HardcodedText" />
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/taskk_executor_btn_all_task"
-                style="@style/BtnStyle"
+                style="@style/Btn_Style"
                 android:text="暂停/恢复线程池所有任务"
                 tools:ignore="HardcodedText" />
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/taskk_executor_btn_async"
-                style="@style/BtnStyle"
+                style="@style/Btn_Style"
                 android:text="异步任务结束回调主线程"
                 tools:ignore="HardcodedText" />
         </LinearLayout>
