--- a/basicktest/src/main/res/layout/activity_utilk_encrypt.xml
+++ b/basicktest/src/main/res/layout/activity_utilk_encrypt.xml
@@ -24,7 +24,7 @@
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/utilk_encrypt_btn_encrypt"
-            style="@style/BtnStyle"
+            style="@style/Btn_Style"
             android:text="加密"
             android:layout_marginBottom="10dp"
             tools:ignore="HardcodedText" />
@@ -44,7 +44,7 @@
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/utilk_encrypt_btn_decrypt"
-            style="@style/BtnStyle"
+            style="@style/Btn_Style"
             android:text="解密"
             android:layout_marginBottom="10dp"
             tools:ignore="HardcodedText" />
