--- a/basicktest/src/main/res/layout/fragment_elemk_fragment_vbvm.xml
+++ b/basicktest/src/main/res/layout/fragment_elemk_fragment_vbvm.xml
@@ -15,7 +15,7 @@
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/elemk_fragment_vbvm_btn"
-            style="@style/BtnStyle"
+            style="@style/Btn_Style"
             android:text="Add Num(VBVM)"
             tools:ignore="HardcodedText" />
 
