--- a/componentk/src/main/res/layout/cameraxk_preview_layout.xml
+++ b/componentk/src/main/res/layout/cameraxk_preview_layout.xml
@@ -29,7 +29,7 @@
             android:paddingHorizontal="16dp"
             android:paddingVertical="32dp"
             android:progressBackgroundTint="@android:color/white"
-            app:haloColor="@color/blue_normal"
-            app:thumbColor="@color/blue_normal" />
+            app:haloColor="@color/ui_blue_650"
+            app:thumbColor="@color/ui_blue_650" />
     </FrameLayout>
 </FrameLayout>
