--- a/componentktest/src/main/res/layout/activity_installk.xml
+++ b/componentktest/src/main/res/layout/activity_installk.xml
@@ -18,7 +18,7 @@
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/installk_btn"
-            style="@style/BtnStyle"
+            style="@style/Btn_Style"
             android:text="installApp"
             tools:ignore="HardcodedText,UsingOnClickInXml" />
     </LinearLayout>
