--- a/debugk/src/main/res/drawable/debugk_crashk_divider.xml
+++ b/debugk/src/main/res/drawable/debugk_crashk_divider.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape android:shape="rectangle" xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/gray_light" />
+    <solid android:color="@color/ui_gray_200" />
     <size android:height="2px" />
 </shape>
