--- a/debugk/src/main/res/layout/debugk_dialog_item.xml
+++ b/debugk/src/main/res/layout/debugk_dialog_item.xml
@@ -30,7 +30,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:textColor="@color/gray_normal"
+            android:textColor="@color/ui_gray_350"
             android:textSize="12sp"
             android:visibility="gone"
             tools:visibility="visible" />
