--- a/uicorek/src/main/res/drawable/layoutk_side_indicator_menu.xml
+++ b/uicorek/src/main/res/drawable/layoutk_side_indicator_menu.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="@color/blue_normal" />
+    <solid android:color="@color/ui_blue_650" />
     <size
         android:width="4dp"
         android:height="32dp" />
