--- a/uicorek/src/main/res/drawable/viewk_progress_line.xml
+++ b/uicorek/src/main/res/drawable/viewk_progress_line.xml
@@ -4,7 +4,7 @@
     <item android:id="@android:id/background">
         <shape>
             <corners android:radius="10dp" />
-            <solid android:color="@color/blue_light" />
+            <solid android:color="@color/ui_blue_050" />
         </shape>
     </item>
     &lt;!&ndash;设置progress进度条颜色&ndash;&gt;
@@ -12,7 +12,7 @@
         <clip android:clipOrientation="horizontal">
             <shape>
                 <corners android:radius="10dp" />
-                <solid android:color="@color/blue_normal" />
+                <solid android:color="@color/ui_blue_650" />
             </shape>
         </clip>
     </item>
@@ -22,17 +22,17 @@
 
     <item
         android:id="@android:id/background"
-        android:drawable="@color/blue_light" />
+        android:drawable="@color/ui_blue_050" />
 
     <item android:id="@android:id/secondaryProgress">
         <scale
-            android:drawable="@color/blue_normal"
+            android:drawable="@color/ui_blue_650"
             android:scaleWidth="100%" />
     </item>
 
     <item android:id="@android:id/progress">
         <scale
-            android:drawable="@color/blue_dark"
+            android:drawable="@color/ui_blue_666"
             android:scaleWidth="100%" />
     </item>
 
