--- a/uicorek/src/main/res/layout/layoutk_empty.xml
+++ b/uicorek/src/main/res/layout/layoutk_empty.xml
@@ -23,7 +23,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dp"
         android:gravity="center"
-        android:textColor="@color/gray_light"
+        android:textColor="@color/ui_gray_200"
         android:textSize="120sp"
         android:textStyle="bold"
         android:visibility="gone"
@@ -56,7 +56,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:textColor="@color/gray_light"
+            android:textColor="@color/ui_gray_200"
             android:textSize="14sp"
             android:visibility="gone"
             tools:text="虽然什么也没有,要不刷新看看~"
@@ -68,7 +68,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="6dp"
             android:gravity="center"
-            android:textColor="@color/blue_normal"
+            android:textColor="@color/ui_blue_650"
             android:textSize="14sp"
             android:visibility="gone"/>
     </LinearLayout>
