--- a/uicorektest/src/main/res/layout/activity_layoutk_btn.xml
+++ b/uicorektest/src/main/res/layout/activity_layoutk_btn.xml
@@ -15,6 +15,6 @@
             android:layout_width="70dp"
             android:layout_height="40dp"
             app:layoutKBtnSwitch_defaultStatus="false"
-            app:layoutKBtnSwitch_bgColorOn="@color/blue_theme" />
+            app:layoutKBtnSwitch_bgColorOn="@color/ui_blue_633" />
     </LinearLayout>
 </layout>
