--- a/uicorektest/src/main/res/layout/activity_layoutk_navbar.xml
+++ b/uicorektest/src/main/res/layout/activity_layoutk_navbar.xml
@@ -17,7 +17,7 @@
             android:layout_height="56dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layoutKNavBar_title="这是主标题"
-            app:layoutKNavBar_title_textColor="@color/blue_normal" />
+            app:layoutKNavBar_title_textColor="@color/ui_blue_650" />
 
         <com.mozhimen.uicorek.layoutk.navbar.LayoutKNavBar
             android:id="@+id/layoutk_navbar2"
