--- a/uicorektest/src/main/res/layout/activity_layoutk_refresh_text.xml
+++ b/uicorektest/src/main/res/layout/activity_layoutk_refresh_text.xml
@@ -22,9 +22,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="120dp"
                     android:layout_marginBottom="2dp"
-                    android:background="@color/blue_light"
+                    android:background="@color/ui_blue_050"
                     android:text="item"
-                    android:textColor="@color/blue_dark"
+                    android:textColor="@color/ui_blue_666"
                     android:textSize="20sp"
                     tools:ignore="HardcodedText" />
 
@@ -32,7 +32,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="120dp"
                     android:layout_marginBottom="2dp"
-                    android:background="@color/blue_theme"
+                    android:background="@color/ui_blue_633"
                     android:text="item"
                     android:textColor="@android:color/white"
                     android:textSize="20sp"
@@ -42,7 +42,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="120dp"
                     android:layout_marginBottom="2dp"
-                    android:background="@color/blue_normal"
+                    android:background="@color/ui_blue_650"
                     android:text="item"
                     android:textColor="@android:color/white"
                     android:textSize="20sp"
@@ -52,7 +52,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="120dp"
                     android:layout_marginBottom="2dp"
-                    android:background="@color/blue_dark"
+                    android:background="@color/ui_blue_666"
                     android:text="item"
                     android:textColor="@android:color/white"
                     android:textSize="20sp"
@@ -62,7 +62,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="120dp"
                     android:layout_marginBottom="2dp"
-                    android:background="@color/blue_normal"
+                    android:background="@color/ui_blue_650"
                     android:text="item"
                     android:textColor="@android:color/white"
                     android:textSize="20sp"
@@ -72,7 +72,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="120dp"
                     android:layout_marginBottom="2dp"
-                    android:background="@color/blue_theme"
+                    android:background="@color/ui_blue_633"
                     android:text="item"
                     android:textColor="@android:color/white"
                     android:textSize="20sp"
@@ -81,9 +81,9 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="120dp"
-                    android:background="@color/blue_light"
+                    android:background="@color/ui_blue_050"
                     android:text="item"
-                    android:textColor="@color/blue_dark"
+                    android:textColor="@color/ui_blue_666"
                     android:textSize="20sp"
                     tools:ignore="HardcodedText" />
             </LinearLayout>
