--- a/uicorektest/src/main/res/layout/activity_layoutk_slider.xml
+++ b/uicorektest/src/main/res/layout/activity_layoutk_slider.xml
@@ -14,7 +14,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginVertical="10dp"
-            android:textColor="@color/blue_normal" />
+            android:textColor="@color/ui_blue_650" />
 
         <com.mozhimen.uicorek.layoutk.slider.LayoutKSlider
             android:id="@+id/layoutk_slider"
@@ -23,15 +23,15 @@
             android:layout_margin="10dp"
             android:background="@color/black"
             app:layoutKSlider_rodDefaultPercent="0.1"
-            app:layoutKSlider_sliderRodLeftColor="@color/blue_light"
-            app:layoutKSlider_sliderRodLeftGradientColor="@color/blue_dark" />
+            app:layoutKSlider_sliderRodLeftColor="@color/ui_blue_050"
+            app:layoutKSlider_sliderRodLeftGradientColor="@color/ui_blue_666" />
 
         <TextView
             android:id="@+id/layoutk_slider_inside_txt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginVertical="10dp"
-            android:textColor="@color/blue_normal" />
+            android:textColor="@color/ui_blue_650" />
 
         <com.mozhimen.uicorek.layoutk.slider.LayoutKSlider
             android:id="@+id/layoutk_slider_inside"
