--- a/uicorektest/src/main/res/layout/item_recyclerk_footer_load.xml
+++ b/uicorektest/src/main/res/layout/item_recyclerk_footer_load.xml
@@ -8,5 +8,5 @@
         android:layout_width="20dp"
         android:layout_height="20dp"
         android:layout_gravity="center"
-        android:indeterminateTint="@color/blue_normal" />
+        android:indeterminateTint="@color/ui_blue_650" />
 </FrameLayout>
