--- a/uicorektest/src/main/res/values/values.xml
+++ b/uicorektest/src/main/res/values/values.xml
@@ -5,12 +5,12 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_marginHorizontal" tools:targetApi="o">20dp</item>
-        <item name="android:backgroundTint">@color/blue_light</item>
-        <item name="android:textColor">@color/blue_normal</item>
-        <item name="android:shadowColor">@color/blue_normal</item>
+        <item name="android:backgroundTint">@color/ui_blue_050</item>
+        <item name="android:textColor">@color/ui_blue_650</item>
+        <item name="android:shadowColor">@color/ui_blue_650</item>
         <item name="android:textSize">16sp</item>
         <item name="cornerRadius">16dp</item>
-        <item name="strokeColor">@color/blue_dark</item>
+        <item name="strokeColor">@color/ui_blue_666</item>
         <item name="textAllCaps">false</item>
     </style>
 
